--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="itesm.mobilestore711.LoginActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/activity_login"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
+tools:context="itesm.mobilestore711.LoginActivity">
 
-    <TextView
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:src="@drawable/ic_7_eleven_brand"
+    android:id="@+id/iv_711_logo"
+    android:layout_above="@+id/tf_username"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="10dp"
+    android:layout_marginRight="50dp"
+    android:layout_marginLeft="50dp"
+    android:layout_alignParentTop="true" />
+
+
+    <ImageView
+        android:id="@+id/iv_user_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_below="@+id/iv_711_logo"
+        android:layout_toStartOf="@+id/tf_username"
+        android:src="@mipmap/ic_person"
+        android:tint="@color/Red711" />
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/tf_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/iv_password_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="11dp"
+        android:backgroundTint="@color/Orange711"
+        android:ems="12"
+        android:hint="Usuario"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/black"
+        android:textColorHint="#000" />
+
+<ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@mipmap/ic_lock"
+    android:tint="@color/Red711"
+    android:id="@+id/iv_password_logo"
+    android:layout_above="@+id/btn_login"
+    android:layout_toStartOf="@+id/tf_password" />
+
+
+    <EditText
+        android:id="@+id/tf_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/tf_username"
+        android:layout_alignTop="@+id/tf_username"
+        android:layout_marginTop="57dp"
+        android:backgroundTint="@color/Orange711"
+        android:ems="12"
+        android:hint="Contraseña"
+        android:inputType="textPassword"
+        android:textColor="@android:color/black"
+        android:textColorHint="#000" />
+
+<Button
+    android:text="Iniciar Sesión"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="14dp"
+    android:id="@+id/btn_login"
+    android:textColor="#000"
+    android:layout_above="@+id/tv_linkRegister"
+    android:layout_centerHorizontal="true"
+    android:backgroundTint="@color/buttonColor"
+    android:paddingRight="25px"
+    android:paddingLeft="25px"  />
+
+    <TextView
+        android:id="@+id/tv_linkRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="28dp"
+        android:text="Registrarme"
+        android:textColor="@color/Red711"
+        android:textSize="18dp" />
+
+</RelativeLayout>
