--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="Orange711">#E6883B</color>
     <color name="Red711">#DA3738</color>
     <color name="buttonColor">#BCBCC0</color>
+    <color name="hintColor">#B7B8BC</color>
 </resources>
