Add Product to Cart completed.

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -31,17 +31,24 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
 
-        <TextView
-            android:id="@+id/tv_product"
+        <SearchView
+            android:id="@+id/sv_products"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_sidemenu"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="10dp"
-            android:text="Productos:"
-            android:textColor="@android:color/black"
-            android:textSize="30dp" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/btn_sidemenu"
+            android:layout_marginEnd="29dp"
+            android:maxWidth="300dp"
+            android:background="@color/Orange711" />
 
+        <ListView
+            android:id="@+id/lv_products"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/btn_sidemenu"
+            android:backgroundTint="@color/buttonColor"
+            android:layout_marginTop="60dp"
+            android:clickable="true" />
 
     </RelativeLayout>
 
@@ -52,8 +59,7 @@
         android:layout_height="match_parent"
         android:background="@color/Green711"
         tools:context="itesm.mobilestore711.LoginActivity"
-        android:layout_gravity="left|start"
-        >
+        android:layout_gravity="left|start">
 
         <ImageView
             android:layout_width="140dp"
@@ -97,8 +103,8 @@
             android:divider="@null"
             android:dividerHeight="0dp"
             android:headerDividersEnabled="false"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="5px"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="5dp"
             />
 
         <ImageView
