--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/ib_back_to_home_product"
-        android:layout_below="@+id/iv_product_image"
+        android:layout_below="@+id/iv_cart_item_image"
         android:layout_marginTop="26dp"
         android:text="Precio:"
         android:textColor="@color/Orange711"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tv_price_title"
         android:layout_alignBottom="@+id/tv_price_title"
-        android:layout_alignStart="@+id/iv_product_image"
+        android:layout_alignStart="@+id/iv_cart_item_image"
         android:text="precio"
         android:textColor="@color/Green711"
         android:textSize="25sp" />
@@ -88,7 +88,7 @@
         android:layout_marginTop="17dp" />
 
     <ImageView
-        android:id="@+id/iv_product_image"
+        android:id="@+id/iv_cart_item_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_alignParentEnd="true"
