--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -68,8 +68,9 @@
             android:id="@+id/img_user_avatar"
             android:elevation="5dp"
             android:layout_marginTop="30dp"
-            android:layout_centerHorizontal="true"
-            android:background="@android:color/transparent" />
+            android:background="@android:color/transparent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/tv_name_sidemenu"
