--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,42 +70,45 @@
         android:layout_alignStart="@+id/iv_icon_password" />
 
     <EditText
+        android:id="@+id/tf_name_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:id="@+id/tf_name_register"
-        android:hint="Nombre y Apellido"
-        android:layout_marginLeft="60dp"
-        android:backgroundTint="@color/Orange711"
-        android:layout_marginRight="-50dp"
-        android:layout_alignTop="@+id/iv_icon_name"
-        android:layout_alignStart="@+id/iv_icon_name"
         android:layout_alignEnd="@+id/tv_register"
-        android:textColorHint="@color/hintColor"/>
+        android:layout_alignStart="@+id/iv_icon_name"
+        android:layout_alignTop="@+id/iv_icon_name"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="-50dp"
+        android:backgroundTint="@color/Orange711"
+        android:hint="Nombre y Apellido"
+        android:inputType="textPersonName"
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/hintColor" />
 
     <EditText
         android:id="@+id/tf_username_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/Orange711"
         android:layout_alignBottom="@+id/iv_icon_username"
+        android:layout_alignEnd="@+id/tf_name_register"
         android:layout_alignStart="@+id/tf_name_register"
+        android:backgroundTint="@color/Orange711"
         android:hint="Nombre de Usuario"
-        android:textColorHint="@color/hintColor"
         android:inputType="textPersonName"
-        android:layout_alignEnd="@+id/tf_name_register" />
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/hintColor" />
 
     <EditText
         android:id="@+id/tf_password_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/Orange711"
-        android:textColorHint="@color/hintColor"
-        android:hint="Contraseña"
         android:layout_above="@+id/iv_icon_confirm_password"
+        android:layout_alignEnd="@+id/tf_username_register"
         android:layout_alignStart="@+id/tf_username_register"
-        android:layout_alignEnd="@+id/tf_username_register" />
+        android:backgroundTint="@color/Orange711"
+        android:hint="Contraseña"
+        android:inputType="textPassword"
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/hintColor" />
 
     <EditText
         android:id="@+id/tf_confirm_password_register"
@@ -117,6 +120,7 @@
         android:backgroundTint="@color/Orange711"
         android:hint="Confirmar Contraseña"
         android:inputType="textPassword"
+        android:textColor="@android:color/black"
         android:textColorHint="@color/hintColor" />
 
     <Button
